++++++++++++++++++++++++
OFSwitch13 release notes
++++++++++++++++++++++++

This file contains OFSwitch13 release notes (most recent releases first).


Release 5.2.1 (Mar 31, 2023)
============================

- Replacing V4PingHelper by PingHelper in examples for ns-3.38 compatibility.

- This version is compatible with BOFUSS library release v5.2.x and ns-3
  version 3.38 (including patches). There is no backward compatibility with
  older ns-3 versions.

- Compilation was tested in Ubuntu 22.04.1 LTS.


Release 5.2.0 (Mar 31, 2023)
============================

- Updating CMakeLists.txt to automatically download and build the BOFUSS
  library.

- Updating the module documentation to reflect the changes in library building.

- Replacing the outdated ofsoftswitch13 library name by BOFUSS in the project
  (source code and documentation).

- Refactoring the BOFUSS ns3lib branch to simplify library compilation.

- This version is compatible with BOFUSS library release v5.2.x and ns-3
  versions 3.36 and 3.37 (including patches). There is no backward
  compatibility with older ns-3 versions.

- Compilation was tested in Ubuntu 22.04.1 LTS.


Release 5.1.0 (Dec 10, 2022)
============================

- Updating the build system to work with CMake to match ns-3.36.

- Updating the source code formatting to match ns-3.37.

- Updating the module documentation, removing outdated figures.

- New CSMA full-duplex patch for improved channel operation.

- Fixing errors when compiling the project with gcc 11.3.0 in Ubuntu 22.04.1.

- This version is compatible with ofsoftswitch13 library release v5.1.x and
  ns-3 versions 3.36 and 3.37 (including patches). There is no backward
  compatibility with older ns-3 versions.

- Compilation was tested in Ubuntu 22.04.1 LTS.


Release 5.0.1 (Dec 20, 2021)
============================

- Updating OFSwitch13Queue for compatibility with the ns-3 queue API.

- Removing DL library dependency to prevent issues with boost library.
