@@ -5,6 +5,16 @@ OFSwitch13 release notes
 This file contains OFSwitch13 release notes (most recent releases first).
 
 
+Release X.X.X (XXX XX, XXXX)
+============================
+
+- Updating buffer timeout operation with millisecond resolution.
+
+- Updating the maximum size of the parent OFSwitch13Queue class with the sum of
+  maximum size of internal queues. The operation mode (packets or bytes) of all
+  internal queues must be the same.
+
+
 Release 5.2.1 (Mar 31, 2023)
 ============================
 
